--- a/about.html
+++ b/about.html
@@ -3,6 +3,7 @@
 
 <head>
     <title>Dias con Magia</title>
+    <link rel="icon" type="image/x-icon" href="images/favicon.png">
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
