--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
         <div class="container">
 
             <a class="navbar-brand" href="index.html">DiasConMagia</a>
-            <img style="max-width:80px;" src="images/logo.png" alt="">
+            <img class="logo-magia" src="images/logo.png" alt="">
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#ftco-nav"
                 aria-controls="ftco-nav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="oi oi-menu"></span> Menu
