--- a/index.html
+++ b/index.html
@@ -30,6 +30,20 @@
     <link rel="stylesheet" href="css/flaticon.css">
     <link rel="stylesheet" href="css/icomoon.css">
     <link rel="stylesheet" href="css/style.css">
+
+    <style>
+        .whatsapp-widget {
+            background-image: url('./images/whatsapp.png');
+            background-repeat: no-repeat;
+            background-size: cover;
+            width: 64px;
+            height: 64px;
+            position: fixed;
+            bottom: 15px;
+            right: 15px;
+        }
+
+    </style>
 </head>
 
 <body class="goto-here">
@@ -41,7 +55,9 @@
                         <div class="col-md pr-4 d-flex topper align-items-center">
                             <div class="icon mr-2 d-flex justify-content-center align-items-center"><span
                                     class="icon-paper-plane"></span></div>
-                            <span class="text">diasconmagia@gmail.com</span>
+                            <span class="text">diasconmagia@gmail.com <a
+                                    href="https://api.whatsapp.com/send?phone=+34657043254&text=¡Hola, estoy interesado en tus productos!">Send
+                                    Message</a></span>
                         </div>
                         <div class="col-md-5 pr-4 d-flex topper align-items-center text-lg-right">
                             <span class="text">Productos hechos a mano con ❤</span>
@@ -212,11 +228,11 @@
                             <div class="overlay"></div>
                         </a>
                         <div class="text py-3 pb-4 px-3 text-center">
-                            <h3><a href="#">Bola renito</a></h3>
+                            <h3><a href="#">Bola renito (Tela)</a></h3>
                             <div class="d-flex">
                                 <div class="pricing">
                                     <p class="price">
-                                        <span class="price-sale">3€</span>
+                                        <span class="price-sale">4€</span>
                                     </p>
                                 </div>
                             </div>
@@ -331,13 +347,18 @@
                         <h2 class="ftco-heading-2">Contacta con Nosotros</h2>
                         <div class="block-23 mb-3">
                             <ul>
+                                <li><a href="https://instagram.com/diasconmagia"><span
+                                            class="icon icon-instagram"></span>
+                                        <span class="text">@diasconmagia</span></a></li>
+                                <li><a
+                                        href="https://api.whatsapp.com/send?phone=+34657043254&text=¡Hola, estoy interesado en tus productos!"><span
+                                            class="icon icon-whatsapp"></span>
+                                        <span class="text">WhatsApp</span></a>
+                                </li>
                                 <li><a href="mailto:diasconmagia@gmail.com">
                                         <span class="icon icon-envelope"></span>
                                         <span class="text">diasconmagia@gmail.com</span>
                                     </a></li>
-                                <li><a href="https://instagram.com/diasconmagia"><span
-                                            class="icon icon-instagram"></span>
-                                        <span class="text">@diasconmagia</span></a></li>
                             </ul>
                         </div>
                     </div>
@@ -346,6 +367,11 @@
         </div>
     </footer>
 
+
+    <a target="_blank"
+        href="https://api.whatsapp.com/send?phone=+34657043254&text=¡Hola, estoy interesado en conocer tus productos!">
+        <div class="whatsapp-widget"></div>
+    </a>
 
 
     <!-- loader -->
