Added Google Analytics and Xmas ball models

--- a/index.html
+++ b/index.html
@@ -52,14 +52,14 @@
             <div class="row no-gutters d-flex align-items-start align-items-center px-md-0">
                 <div class="col-lg-12 d-block">
                     <div class="row d-flex">
-                        <div class="col-md pr-4 d-flex topper align-items-center">
+                        <div class="col-md pr-4 d-flex topper topper1 align-items-center">
                             <div class="icon mr-2 d-flex justify-content-center align-items-center"><span
                                     class="icon-paper-plane"></span></div>
                             <span class="text">diasconmagia@gmail.com <a
                                     href="https://api.whatsapp.com/send?phone=+34657043254&text=¡Hola, estoy interesado en tus productos!">Send
                                     Message</a></span>
                         </div>
-                        <div class="col-md-5 pr-4 d-flex topper align-items-center text-lg-right">
+                        <div class="col-md-5 pr-4 d-flex topper topper2 align-items-center text-lg-right">
                             <span class="text">Productos hechos a mano con ❤</span>
                         </div>
                     </div>
@@ -133,12 +133,12 @@
             <div class="row">
                 <div class="col-md-6 col-lg-3 ftco-animate">
                     <div class="product">
-                        <a href="https://wallapop.com/app/user/andreas-48303247-8ejkmx09ypzx" target="_blank"
-                            class="img-prod"><img class="img-fluid" src="images/product-1.jpg">
+                        <a href="https://api.whatsapp.com/send?phone=+34657043254&text=¡Hola! Me interesa la Bola de madera clásica 🎄🎅"
+                            target="_blank" class="img-prod"><img class="img-fluid" src="images/product-1.jpg">
                             <div class="overlay"></div>
                         </a>
                         <div class="text py-3 pb-4 px-3 text-center">
-                            <h3><a href="#">Bola perro I</a></h3>
+                            <h3><a href="#">Bola madera clásica</a></h3>
                             <div class="d-flex">
                                 <div class="pricing">
                                     <p class="price">
@@ -151,16 +151,16 @@
                 </div>
                 <div class="col-md-6 col-lg-3 ftco-animate">
                     <div class="product">
-                        <a href="https://wallapop.com/app/user/andreas-48303247-8ejkmx09ypzx" target="_blank"
-                            class="img-prod"><img class="img-fluid" src="images/product-2.jpg">
+                        <a href="https://api.whatsapp.com/send?phone=+34657043254&text=¡Hola! Me interesa la Bola de madera con lazo 🎄🎀"
+                            target="_blank" class="img-prod"><img class="img-fluid" src="images/product-6.jpg">
                             <div class="overlay"></div>
                         </a>
                         <div class="text py-3 pb-4 px-3 text-center">
-                            <h3><a href="#">Bola perro II</a></h3>
+                            <h3><a href="#">Bola madera lazo tela</a></h3>
                             <div class="d-flex">
                                 <div class="pricing">
                                     <p class="price">
-                                        <span class="price-sale">3€</span>
+                                        <span class="price-sale">4€</span>
                                     </p>
                                 </div>
                             </div>
@@ -169,40 +169,41 @@
                 </div>
                 <div class="col-md-6 col-lg-3 ftco-animate">
                     <div class="product">
-                        <a href="https://wallapop.com/app/user/andreas-48303247-8ejkmx09ypzx" target="_blank"
-                            class="img-prod"><img class="img-fluid" src="images/product-3.jpg">
+                        <a href="https://diasconmagia.com/images/modelos-bolas-1.jpeg" target="_blank"
+                            class="img-prod"><img class="img-fluid" src="images/modelos-bolas-1.jpeg">
                             <div class="overlay"></div>
                         </a>
                         <div class="text py-3 pb-4 px-3 text-center">
-                            <h3><a href="#">Bola calcetín</a></h3>
-                            <div class="d-flex">
+                            <h3><a href="#">Modelos I</a></h3>
+                            <!--<div class="d-flex">
                                 <div class="pricing">
                                     <p class="price">
                                         <span class="price-sale">3€</span>
                                     </p>
                                 </div>
-                            </div>
+                            </div>-->
                         </div>
                     </div>
                 </div>
                 <div class="col-md-6 col-lg-3 ftco-animate">
                     <div class="product">
-                        <a href="https://wallapop.com/app/user/andreas-48303247-8ejkmx09ypzx" target="_blank"
-                            class="img-prod"><img class="img-fluid" src="images/product-4.jpg">
+                        <a href="https://diasconmagia.com/images/modelos-bolas-2.jpeg" target="_blank"
+                            class="img-prod"><img class="img-fluid" src="images/modelos-bolas-2.jpeg">
                             <div class="overlay"></div>
                         </a>
                         <div class="text py-3 pb-4 px-3 text-center">
-                            <h3><a href="#">Bola conejo</a></h3>
-                            <div class="d-flex">
+                            <h3><a href="#">Modelos II</a></h3>
+                            <!--<div class="d-flex">
                                 <div class="pricing">
                                     <p class="price">
                                         <span class="price-sale">3€</span>
                                     </p>
                                 </div>
-                            </div>
+                            </div>-->
                         </div>
                     </div>
                 </div>
+                <!--
                 <div class="col-md-6 col-lg-3 ftco-animate">
                     <div class="product">
                         <a href="https://wallapop.com/app/user/andreas-48303247-8ejkmx09ypzx" target="_blank"
@@ -275,6 +276,7 @@
                         </div>
                     </div>
                 </div>
+                -->
             </div>
         </div>
     </section>
@@ -395,10 +397,16 @@
     <script src="js/jquery.animateNumber.min.js"></script>
     <script src="js/bootstrap-datepicker.js"></script>
     <script src="js/scrollax.min.js"></script>
-    <script
-        src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBVWaKrjvy3MaE7SQ74_uJiULgl1JY0H2s&sensor=false"></script>
-    <script src="js/google-map.js"></script>
     <script src="js/main.js"></script>
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-F0TGL0Z81J"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag() { dataLayer.push(arguments); }
+        gtag('js', new Date());
+
+        gtag('config', 'G-F0TGL0Z81J');
+    </script>
 
 </body>
 
