--- a/index.html
+++ b/index.html
@@ -133,12 +133,11 @@
             <div class="row">
                 <div class="col-md-6 col-lg-3 ftco-animate">
                     <div class="product">
-                        <a href="https://api.whatsapp.com/send?phone=+34657043254&text=¡Hola! Me interesa la Bola de madera clásica 🎄🎅"
-                            target="_blank" class="img-prod"><img class="img-fluid" src="images/product-1.jpg">
+                        <a class="img-prod"><img class="img-fluid" src="images/product-1.jpg">
                             <div class="overlay"></div>
                         </a>
                         <div class="text py-3 pb-4 px-3 text-center">
-                            <h3><a href="#">Bola madera clásica</a></h3>
+                            <h3><a>Bola madera clásica</a></h3>
                             <div class="d-flex">
                                 <div class="pricing">
                                     <p class="price">
@@ -151,12 +150,11 @@
                 </div>
                 <div class="col-md-6 col-lg-3 ftco-animate">
                     <div class="product">
-                        <a href="https://api.whatsapp.com/send?phone=+34657043254&text=¡Hola! Me interesa la Bola de madera con lazo 🎄🎀"
-                            target="_blank" class="img-prod"><img class="img-fluid" src="images/product-6.jpg">
+                        <a class="img-prod"><img class="img-fluid" src="images/product-6.jpg">
                             <div class="overlay"></div>
                         </a>
                         <div class="text py-3 pb-4 px-3 text-center">
-                            <h3><a href="#">Bola madera lazo tela</a></h3>
+                            <h3><a>Bola madera lazo tela</a></h3>
                             <div class="d-flex">
                                 <div class="pricing">
                                     <p class="price">
