Added some example orders

--- a/index.html
+++ b/index.html
@@ -201,80 +201,46 @@
                         </div>
                     </div>
                 </div>
-                <!--
+            </div>
+        </div>
+        <div class="container">
+            <div class="row justify-content-center mb-3 pb-3">
+                <div class="col-md-12 heading-section text-center ftco-animate">
+                    <h2 class="mb-4">Últimos pedidos</h2>
+                    <p>Estos son algunos de los últimos encargos que hemos tenido</p>
+                </div>
+            </div>
+        </div>
+        <div class="container">
+            <div class="row">
                 <div class="col-md-6 col-lg-3 ftco-animate">
                     <div class="product">
-                        <a href="https://wallapop.com/app/user/andreas-48303247-8ejkmx09ypzx" target="_blank"
-                            class="img-prod"><img class="img-fluid" src="images/product-5.jpg">
+                        <a class="img-prod"><img class="img-fluid" src="images/pedidos/1.JPG">
                             <div class="overlay"></div>
                         </a>
-                        <div class="text py-3 pb-4 px-3 text-center">
-                            <h3><a href="#">Bola abuelos</a></h3>
-                            <div class="d-flex">
-                                <div class="pricing">
-                                    <p class="price">
-                                        <span class="price-sale">3€</span>
-                                    </p>
-                                </div>
-                            </div>
-                        </div>
                     </div>
                 </div>
                 <div class="col-md-6 col-lg-3 ftco-animate">
                     <div class="product">
-                        <a href="https://wallapop.com/app/user/andreas-48303247-8ejkmx09ypzx" target="_blank"
-                            class="img-prod"><img class="img-fluid" src="images/product-6.jpg">
+                        <a class="img-prod"><img class="img-fluid" src="images/pedidos/2.JPG">
                             <div class="overlay"></div>
                         </a>
-                        <div class="text py-3 pb-4 px-3 text-center">
-                            <h3><a href="#">Bola renito (Tela)</a></h3>
-                            <div class="d-flex">
-                                <div class="pricing">
-                                    <p class="price">
-                                        <span class="price-sale">4€</span>
-                                    </p>
-                                </div>
-                            </div>
-                        </div>
                     </div>
                 </div>
                 <div class="col-md-6 col-lg-3 ftco-animate">
                     <div class="product">
-                        <a href="https://wallapop.com/app/user/andreas-48303247-8ejkmx09ypzx" target="_blank"
-                            class="img-prod"><img class="img-fluid" src="images/product-7.jpg">
+                        <a class="img-prod"><img class="img-fluid" src="images/pedidos/3.JPG">
                             <div class="overlay"></div>
                         </a>
-                        <div class="text py-3 pb-4 px-3 text-center">
-                            <h3><a href="#">Bola osito</a></h3>
-                            <div class="d-flex">
-                                <div class="pricing">
-                                    <p class="price">
-                                        <span class="price-sale">3€</span>
-                                    </p>
-                                </div>
-                            </div>
-                        </div>
                     </div>
                 </div>
                 <div class="col-md-6 col-lg-3 ftco-animate">
                     <div class="product">
-                        <a href="https://wallapop.com/app/user/andreas-48303247-8ejkmx09ypzx" target="_blank"
-                            class="img-prod"><img class="img-fluid" src="images/product-8.jpg">
+                        <a class="img-prod"><img class="img-fluid" src="images/pedidos/4.JPG">
                             <div class="overlay"></div>
                         </a>
-                        <div class="text py-3 pb-4 px-3 text-center">
-                            <h3><a href="#">Bola bola de cristal</a></h3>
-                            <div class="d-flex">
-                                <div class="pricing">
-                                    <p class="price">
-                                        <span class="price-sale">3€</span>
-                                    </p>
-                                </div>
-                            </div>
-                        </div>
                     </div>
                 </div>
-                -->
             </div>
         </div>
     </section>
