Updates some products

--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
                             <div class="overlay"></div>
                         </a>
                         <div class="text py-3 pb-4 px-3 text-center">
-                            <h3><a>Bola madera clásica</a></h3>
+                            <h3><a>Bola madera cuerda</a></h3>
                             <div class="d-flex">
                                 <div class="pricing">
                                     <p class="price">
@@ -167,19 +167,46 @@
                 </div>
                 <div class="col-md-6 col-lg-3 ftco-animate">
                     <div class="product">
+                        <a class="img-prod"><img class="img-fluid" src="images/product-9.jpg">
+                            <div class="overlay"></div>
+                        </a>
+                        <div class="text py-3 pb-4 px-3 text-center">
+                            <h3><a>Etiqueta personalizada</a></h3>
+                            <div class="d-flex">
+                                <div class="pricing">
+                                    <p class="price">
+                                        <span class="price-sale">2€</span>
+                                    </p>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-6 col-lg-3 ftco-animate">
+                    <div class="product">
+                        <a class="img-prod"><img class="img-fluid" src="images/product-10.jpg">
+                            <div class="overlay"></div>
+                        </a>
+                        <div class="text py-3 pb-4 px-3 text-center">
+                            <h3><a>Lapiz madera con nombre</a></h3>
+                            <div class="d-flex">
+                                <div class="pricing">
+                                    <p class="price">
+                                        <span class="price-sale">5€</span>
+                                    </p>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <!--<div class="col-md-6 col-lg-3 ftco-animate">
+                    <div class="product">
                         <a href="https://diasconmagia.com/images/modelos-bolas-1.jpeg" target="_blank"
                             class="img-prod"><img class="img-fluid" src="images/modelos-bolas-1.jpeg">
                             <div class="overlay"></div>
                         </a>
                         <div class="text py-3 pb-4 px-3 text-center">
                             <h3><a href="#">Modelos I</a></h3>
-                            <!--<div class="d-flex">
-                                <div class="pricing">
-                                    <p class="price">
-                                        <span class="price-sale">3€</span>
-                                    </p>
-                                </div>
-                            </div>-->
                         </div>
                     </div>
                 </div>
@@ -191,16 +218,9 @@
                         </a>
                         <div class="text py-3 pb-4 px-3 text-center">
                             <h3><a href="#">Modelos II</a></h3>
-                            <!--<div class="d-flex">
-                                <div class="pricing">
-                                    <p class="price">
-                                        <span class="price-sale">3€</span>
-                                    </p>
-                                </div>
-                            </div>-->
                         </div>
                     </div>
-                </div>
+                </div>-->
             </div>
         </div>
         <div class="container">
